--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,8 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} Your name here. All rights reserved.
+	<span class="sc block">El Árbol de las Historias</span>
+	<span class="opacity-70">¿Qué camino eliges?</span>
 	<div class="social-links">
 		<a href="https://m.webtoo.ls/@astro" target="_blank">
 			<span class="sr-only">Follow Astro on Mastodon</span>
