--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ const bookListByDate = await getStoryOrderByDate() as unknown as LittleStory[]
 	<HeroSection />
 	<CategoriesSection type="general" />
 	<BooksSection id="cuentos-top" bookList={bookList || []} title="Top de cuentos más populares" content="Estos son los cuentos que han conquistado el corazón de nuestra comunidad de lectores. Cada uno ha sido destacado por su historia cautivadora, personajes inolvidables y por el impacto que han tenido en quienes los han leído. ¡Sumérgete en estas lecturas imprescindibles y descubre por qué se han convertido en los más valorados de nuestra colección!" />
-	<CategoriesSection type="age" title="¿Quieres encontrar cuentos por edad?" id="categorias-por-edad">
+	<CategoriesSection type="age" title="¿Quieres encontrar cuentos por edad?" id="categorias-por-edad" effect="cloud">
 		<p>Si no sabes que cuento leer, puedes buscar por edad.</p>
 	</CategoriesSection>
 	<BooksSection id="cuentos-recientes" bookList={bookListByDate || []} title="Últimos cuentos añadidos" content="¡Descubre nuestras historias más nuevas! Aquí encontrarás los relatos que acaban de unirse a nuestra colección, llenos de frescura y emoción. Sumérgete en aventuras recién publicadas y sé de los primeros en disfrutar de estas lecturas únicas. ¡No dejes pasar la oportunidad de descubrir tu próximo cuento favorito!" />
