--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,6 +25,15 @@
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
+@font-face {
+  font-family: 'Ysabeau SC';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 1 1000;
+  src: url(@fontsource-variable/ysabeau-sc/files/ysabeau-sc-latin-wght-normal.woff2) format('woff2-variations');
+  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+}
+
 body {
 	font-family: 'Ysabeau Infant Variable', sans-serif;
 	margin: 0;
@@ -44,6 +53,11 @@ main {
 	margin: auto;
 	padding: 3em 1em; */
 }
+
+.sc {
+	font-family: 'Ysabeau SC', sans-serif;
+}
+
 h1,
 h2,
 h3,
@@ -54,6 +68,7 @@ h6 {
 	color: rgb(var(--black));
 	line-height: 1.2;
 }
+
 h1 {
 	font-size: 3.052em;
 }
