--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,8 @@
 ---
 import HeaderLink from './HeaderLink.astro';
-import { SITE_TITLE } from '../consts';
-import ThemeIcon from './ThemeIcon.astro';
 ---
 
-<header class="absolute w-svw z-10">
+<header class="absolute w-full z-10">
 	<!-- <ThemeIcon /> -->
 	<nav>
 		<h2><a href="/" class="sc">El árbol de las historias</a></h2>
