--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -5,8 +5,8 @@ import Search from '@components/Search'
 import Stars from '@components/Stars.astro'
 ---
 
-<section class="hero w-svw h-svh top-0 left-0 relative overflow-hidden">
-  <div class="wall w-svw h-[70svh] relative flex items-center flex-col-reverse gap-32">
+<section class="hero w-full h-svh top-0 left-0 relative overflow-hidden">
+  <div class="wall w-full h-[70svh] relative flex items-center flex-col-reverse gap-32">
     <div class="portal absolute overflow-hidden bottom-0 margin-auto max-w-xl rounded-tl-full rounded-tr-full h-[90%] w-5/6 z-10">
       <Stars />
     </div>
@@ -82,7 +82,7 @@ import Stars from '@components/Stars.astro'
     transform-style: preserve-3d;
     transform: rotateX(70deg);
     position: absolute;
-    width: 100svw;
+    width: 100vw;
     height: 100svh;
   }
 
