--- a/src/pages/cuentos/[category].astro
+++ b/src/pages/cuentos/[category].astro
@@ -3,7 +3,7 @@ import AgeCategory from "@components/AgeCategory.astro";
 import GeneralCategory from "@components/GeneralCategory.astro";
 
 import Layout from "@layouts/LayoutCategory.astro";
-import { getStoriesByCategory, getCategoryBySlug } from "@src/turso";
+import { getCategoryBySlug } from "@src/turso";
 import { type CategoryData } from "@types";
 export const prerender = false;
 
