--- a/src/components/Planet.astro
+++ b/src/components/Planet.astro
@@ -4,31 +4,37 @@ interface Props {
   class?: string
   planet1?: boolean
   planet2?: boolean
+  planet3?: boolean
+  planet4?: boolean
 }
 
-const { class: className, planet1, planet2 } = Astro.props
+const { class: className, planet1, planet2, planet3, planet4 } = Astro.props
 ---
 
 <div class:list={[
   planet1 ? 'planet-atmosphere-1' : '',
   planet2 ? 'planet-atmosphere-2' : '',
+  planet3 ? 'planet-atmosphere-3' : '',
+  planet4 ? 'planet-atmosphere-4' : '',
   "absolute z-10 hidden md:block",
   className
 ]}>
   <div class:list={[
     planet1 ? 'planet_surface-1' : '',
     planet2 ? 'planet_surface-2' : '',
+    planet3 ? 'planet_surface-3' : '',
+    planet4 ? 'planet_surface-4' : '',
   ]}></div>
 </div>
 
 <style>
   :root {
-    --planet-1-image: url(./hero/planet-texture-1.webp);
-    --planet-2-image: url(./hero/planet-texture-2.webp);
+    --planet-1-image: url(/hero/planet-texture-1.webp);
+    --planet-2-image: url(/hero/planet-texture-2.webp);
+    --planet-3-image: url(/hero/planet-texture-3.webp);
+    --planet-4-image: url(/hero/planet-texture-4.webp);
     --planet-1-tilt: rotate(40deg);
     --planet-2-tilt: rotate(150deg); 
-    --planet-1-color: blue;
-    --planet-2-color: #e8cda2;
     --planet-1-day: 153.3;
     --planet-2-day: 153.3;
   }
@@ -70,6 +76,52 @@ const { class: className, planet1, planet2 } = Astro.props
 
   .planet_surface-2 {
     background-image: var(--planet-2-image);
+    transform: var(--planet-2-tilt) scale(1.2);
+    animation: planetRotate calc(var(--planet-2-day)* .1s) linear infinite;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    background-size: cover;
+  }
+
+  .planet-atmosphere-3 {
+    height: 120px;
+    width: 120px;
+    background: radial-gradient(circle at 30% 50%, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 65%);
+    border-radius: 100px;
+    overflow: hidden;
+    box-shadow: inset 10px 0px 12px -2px rgba(255, 255, 255, 0.2), inset -70px 0px 50px 0px black, 0px 0px 77px 17px #67a2a7;
+    top: 50%;
+    right: 10%;
+    filter: saturate(0.5);
+  }
+
+  .planet_surface-3 {
+    background-image: var(--planet-3-image);
+    transform: var(--planet-2-tilt) scale(1.2);
+    animation: planetRotate calc(var(--planet-2-day)* .1s) linear infinite;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    background-size: cover;
+  }
+
+  .planet-atmosphere-4 {
+    height: 120px;
+    width: 120px;
+    background: radial-gradient(circle at 30% 50%, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 65%);
+    border-radius: 100px;
+    overflow: hidden;
+    box-shadow: inset 10px 0px 12px -2px rgba(255, 255, 255, 0.2), inset -70px 0px 50px 0px black, 0px 0px 77px 17px #67a2a7;
+    top: 30%;
+    left: 10%;
+    filter: saturate(0.5);
+  }
+
+  .planet_surface-4 {
+    background-image: var(--planet-4-image);
     transform: var(--planet-2-tilt) scale(1.2);
     animation: planetRotate calc(var(--planet-2-day)* .1s) linear infinite;
     position: absolute;
