--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import { ClientRouter } from 'astro:transitions';
-import Header from '@components/HeaderV2.astro';
+import Header from '@components/Header.astro';
 import BaseHead from '@components/BaseHead.astro';
 import Footer from '@components/Footer.astro';
 
