--- a/src/pages/cuentos/[category].astro
+++ b/src/pages/cuentos/[category].astro
@@ -1,6 +1,8 @@
 ---
 import AgeCategory from "@components/AgeCategory.astro";
 import GeneralCategory from "@components/GeneralCategory.astro";
+import { type LittleStory } from "@types";
+import { getStoriesByCategory, getStoriesByAge } from "@src/turso";
 
 import Layout from "@layouts/LayoutCategory.astro";
 import { getCategoryBySlug } from "@src/turso";
@@ -18,9 +20,28 @@ if (!category) {
 const { name, title, meta_title: metaTitle, slug, meta_description: metaDescription, content_by_age, initial_content: initialContent, type } = await getCategoryBySlug(category) as unknown as CategoryData;
 const contentByAge = JSON.parse(content_by_age);
 
+let stories = [] as unknown as LittleStory[];;
+
+if (type === 'general') {
+  const storiesCategory = await getStoriesByCategory(name) as unknown as LittleStory[];
+  stories = storiesCategory;
+}
+
+const categories: Record<string, string | string[]> = {
+  children: '3-4',
+  kids: ['5-8', '9-12'],
+  teens: '13-18',
+  adults: '18+',
+};
+
+if (type === 'age') {
+  const storiesCategory = await getStoriesByAge(categories[name]) as unknown as LittleStory[];
+  stories = storiesCategory;
+}
+
 ---
 
-<Layout title={title}, metaTitle={metaTitle} metaDescription={metaDescription} slug={slug} name={name} >
+<Layout title={title}, metaTitle={metaTitle} metaDescription={metaDescription} slug={slug} name={name} stories={stories}>
   <section class="px-4 py-8">
     <h1 class="leading-tight text-balance">{title}</h1>
     {
@@ -31,12 +52,12 @@ const contentByAge = JSON.parse(content_by_age);
   </section>
   {
     type === 'general' && (
-      <GeneralCategory contentByAge={contentByAge} name={name} />
+      <GeneralCategory contentByAge={contentByAge} stories={stories} />
     )
   }
   {
     type === 'age' && (
-      <AgeCategory contentByAge={contentByAge} name={name} />
+      <AgeCategory contentByAge={contentByAge} stories={stories} />
     )
   }
 </Layout>
