--- a/src/pages/sobre-mi.astro
+++ b/src/pages/sobre-mi.astro
@@ -1,8 +1,11 @@
 ---
 import Layout from "@layouts/LayoutPage.astro";
+import { getCldOgImageUrl } from 'astro-cloudinary/helpers';
+
+const ogImageUrl = getCldOgImageUrl({ src: 'cuentos-interactivos/about' });
 ---
 
-<Layout page="about" title="Un Mundo de Historias: Contando cuentos a mi hijo" description="Descubre cómo nació esta página de relatos, inspirada en las noches de lectura con mi hijo. Un rincón donde cada historia invita a soñar y a aprender." relatedStories={[]}>
+<Layout page="about" title="Un Mundo de Historias: Contando cuentos a mi hijo" description="Descubre cómo nació esta página de relatos, inspirada en las noches de lectura con mi hijo. Un rincón donde cada historia invita a soñar y a aprender." relatedStories={[]} image={ogImageUrl}>
   <p>Desde que tengo memoria, las historias me han acompañado en todos los momentos de mi vida: en mis tardes llenas de imaginación y en las noches en las que un susurro antes de dormir se convertía en la llave a un universo lleno de posibilidades. Con el tiempo, me di cuenta de que la magia de un cuento no reside únicamente en sus personajes o paisajes imposibles, sino en la conexión que crea con quien lo escucha.</p>
   <p>Esa conexión cobró nueva vida cuando mi hijo me pidió, a su manera, un mundo al que asomarse cada noche. Entre risas, preguntas curiosas y miradas llenas de asombro, descubrí que a veces un simple relato puede encender una chispa de creatividad e ilusión que acompaña a los más pequeños durante todo el día.</p>
   <p>Fue entonces cuando nació la idea de esta página: un lugar para recopilar, contar y compartir esas historias que, de tanto repetirse, empezaron a convertirse en pequeños tesoros familiares. Mi objetivo es que cualquier persona —sin importar su edad— pueda encontrar un refugio de fantasía y aprendizaje en cada lectura.</p>
